public/css/explorer/explorer.css
.daxplore-explorer {
  display: flex;
  flex-direction: row;
}

body {
  background: #FFF;
  font-family: 'Raleway', sans-serif;
  font-size: 12px;
  line-height: 1.1;
	margin: 0;
	padding: 0;
}

h1 {
  color: #777;
  font-size: 2em;
  font-weight: bold;
  margin: 40px 0 70px;
  text-align: center;
}

h2 {
  font-size: 2em;
  font-weight: bold;
  margin-bottom: 10px;
  margin-top: 0;
  text-align: center;
}

.section-header {
  color: #777;
  font-weight: bold;
  white-space: nowrap;
}

a, a:visited, .gwt-Anchor, .gwt-Anchor:visited {
	color: #3D748F !important; /*hsl(200, 40%, 40%);*/
	font-weight: bold;
	text-decoration: none;
}

a:hover, .gwt-Anchor:hover {
	color: #2E576B !important;	/*hsl(200, 40%, 30%)*/
}

.noscript {
  font-family: sans-serif;
  font-size: large;
	padding: 20px;
}

.warning-sub{
  background-position: left center;
  background-repeat: no-repeat;
  color: #333333;
  font-size: small;
  margin-left: 0;
  padding-left: 23px;
}

.warning-sub-sv{
	background-image: url("../img/globallinks-lang-sv.gif");
}

.warning-sub-en{
	background-image: url("../img/globallinks-lang-en.gif");
}

.general-warning-section{
	width:100%;
}

/* superscript */
.super {
	bottom: 0.5em;
	color: black;
	font-size: 0.8em;
  /* position: relative; */
}

